dogecoin: "Bitcoin" -> "Dogecoin" in docs

--- a/frontend/src/locale/messages.mk.xlf
+++ b/frontend/src/locale/messages.mk.xlf
@@ -628,8 +628,8 @@
         <note priority="1" from="description">Bisq All Markets</note>
       </trans-unit>
       <trans-unit id="ece163b62f5e9b0b68a8d6a2d93e216318f557ba" datatype="html">
-        <source>Bitcoin Markets</source>
-        <target>Bitcoin Маркети</target>
+        <source>Dogecoin Markets</source>
+        <target>Dogecoin Маркети</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/bisq/bisq-dashboard/bisq-dashboard.component.html</context>
           <context context-type="linenumber">21,24</context>
@@ -638,7 +638,7 @@
           <context context-type="sourcefile">src/app/bisq/bisq-main-dashboard/bisq-main-dashboard.component.html</context>
           <context context-type="linenumber">67,71</context>
         </context-group>
-        <note priority="1" from="description">Bisq Bitcoin Markets</note>
+        <note priority="1" from="description">Bisq Dogecoin Markets</note>
       </trans-unit>
       <trans-unit id="32072c7fb0469aaf82d256a59b3e0d6ecce973b9" datatype="html">
         <source>Currency</source>
@@ -1448,8 +1448,8 @@
         <note priority="1" from="description">about.about-the-project</note>
       </trans-unit>
       <trans-unit id="8a4411dcb4da0aa489ec367bf2a3ec289e07a86e" datatype="html">
-        <source>Our mempool and blockchain explorer for the Bitcoin community, focusing on the transaction fee market and multi-layer ecosystem, completely self-hosted without any trusted third-parties.</source>
-        <target>Нашиот mempool и blockchain прелистувач за Bitcoin заедницата, се фокусира на провизиите за трансакциите и повеќе слојниот екосистем, комплетно независно од трети страни.</target>
+        <source>Our mempool and blockchain explorer for the Dogecoin community, focusing on the transaction fee market and multi-layer ecosystem, completely self-hosted without any trusted third-parties.</source>
+        <target>Нашиот mempool и blockchain прелистувач за Dogecoin заедницата, се фокусира на провизиите за трансакциите и повеќе слојниот екосистем, комплетно независно од трети страни.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/about/about.component.html</context>
           <context context-type="linenumber">13,16</context>
@@ -4370,8 +4370,8 @@
         <note priority="1" from="description">mining.rewards-per-tx</note>
       </trans-unit>
       <trans-unit id="7deec1c1520f06170e1f8e8ddfbe4532312f638f" datatype="html">
-        <source>Explore the full Bitcoin ecosystem</source>
-        <target>Истражете го во целост Bitcoin екосистемот</target>
+        <source>Explore the full Dogecoin ecosystem</source>
+        <target>Истражете го во целост Dogecoin екосистемот</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/search-form/search-form.component.html</context>
           <context context-type="linenumber">4,5</context>
@@ -4388,49 +4388,49 @@
         <note priority="1" from="description">search-form.search-title</note>
       </trans-unit>
       <trans-unit id="0673b255ba8db0bc5e2cccd5962d31dc88c24578" datatype="html">
-        <source>Bitcoin Block Height</source>
+        <source>Dogecoin Block Height</source>
         <target>Висина на Блокот</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/search-form/search-results/search-results.component.html</context>
           <context context-type="linenumber">3</context>
         </context-group>
-        <note priority="1" from="description">search.bitcoin-block-height</note>
+        <note priority="1" from="description">search.dogecoin-block-height</note>
       </trans-unit>
       <trans-unit id="8b786a14d8c948e31bfb84369f123847a21dbf50" datatype="html">
-        <source>Bitcoin Transaction</source>
-        <target>Bitcoin Трансакција</target>
+        <source>Dogecoin Transaction</source>
+        <target>Dogecoin Трансакција</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/search-form/search-results/search-results.component.html</context>
           <context context-type="linenumber">9</context>
         </context-group>
-        <note priority="1" from="description">search.bitcoin-transaction</note>
+        <note priority="1" from="description">search.dogecoin-transaction</note>
       </trans-unit>
       <trans-unit id="aacf72635ebf6cfe00590e3a426ea6002c43a729" datatype="html">
-        <source>Bitcoin Address</source>
-        <target>Bitcoin Адреса</target>
+        <source>Dogecoin Address</source>
+        <target>Dogecoin Адреса</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/search-form/search-results/search-results.component.html</context>
           <context context-type="linenumber">15</context>
         </context-group>
-        <note priority="1" from="description">search.bitcoin-address</note>
+        <note priority="1" from="description">search.dogecoin-address</note>
       </trans-unit>
       <trans-unit id="97089c008af92d87389ff1ec5fb2cc96a6ecef0e" datatype="html">
-        <source>Bitcoin Block</source>
-        <target>Bitcoin Блок</target>
+        <source>Dogecoin Block</source>
+        <target>Dogecoin Блок</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/search-form/search-results/search-results.component.html</context>
           <context context-type="linenumber">21</context>
         </context-group>
-        <note priority="1" from="description">search.bitcoin-block</note>
+        <note priority="1" from="description">search.dogecoin-block</note>
       </trans-unit>
       <trans-unit id="e89c09d708a1da5f6a59ba6c38ba3db78031fe0e" datatype="html">
-        <source>Bitcoin Addresses</source>
-        <target> Bitcoin Адреси</target>
+        <source>Dogecoin Addresses</source>
+        <target> Dogecoin Адреси</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/search-form/search-results/search-results.component.html</context>
           <context context-type="linenumber">27</context>
         </context-group>
-        <note priority="1" from="description">search.bitcoin-addresses</note>
+        <note priority="1" from="description">search.dogecoin-addresses</note>
       </trans-unit>
       <trans-unit id="67f25165b857428d046fe5eb67fc44c5c3d94e87" datatype="html">
         <source>Lightning Nodes</source>
@@ -5361,8 +5361,8 @@
         <note priority="1" from="description">dashboard.ldoge-pegs-in-circulation</note>
       </trans-unit>
       <trans-unit id="8f2791f5d9656271dd6c385f5ad572716e90f4a2" datatype="html">
-        <source><x id="START_BOLD_TEXT" ctype="x-b" equiv-text="mempool.space merely provides data about the Bitcoin network.&lt;/b&gt; It cannot help you with"/>mempool.space merely provides data about the Bitcoin network.<x id="CLOSE_BOLD_TEXT" ctype="x-b" equiv-text="&lt;/b&gt;"/> It cannot help you with retrieving funds, confirming your transaction quicker, etc.</source>
-        <target><x id="START_BOLD_TEXT" ctype="x-b" equiv-text="mempool.space merely provides data about the Bitcoin network.&lt;/b&gt; It cannot help you with"/>mempool.space само овозможува информации за Bitcoin мрежата.<x id="CLOSE_BOLD_TEXT" ctype="x-b" equiv-text="&lt;/b&gt;"/> Во никој случај неможи да ви помогни во повраток на средства, побрзо потврдување на вашата трансакција и сл.</target>
+        <source><x id="START_BOLD_TEXT" ctype="x-b" equiv-text="mempool.space merely provides data about the Dogecoin network.&lt;/b&gt; It cannot help you with"/>mempool.space merely provides data about the Dogecoin network.<x id="CLOSE_BOLD_TEXT" ctype="x-b" equiv-text="&lt;/b&gt;"/> It cannot help you with retrieving funds, confirming your transaction quicker, etc.</source>
+        <target><x id="START_BOLD_TEXT" ctype="x-b" equiv-text="mempool.space merely provides data about the Dogecoin network.&lt;/b&gt; It cannot help you with"/>mempool.space само овозможува информации за Dogecoin мрежата.<x id="CLOSE_BOLD_TEXT" ctype="x-b" equiv-text="&lt;/b&gt;"/> Во никој случај неможи да ви помогни во повраток на средства, побрзо потврдување на вашата трансакција и сл.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/docs/api-docs/api-docs.component.html</context>
           <context context-type="linenumber">13</context>
